<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/khaki">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textColor="@color/midnightblue"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:text="@string/app"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/midnightblue"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/sel"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/circ"
                        android:textStyle="bold"
                        android:textColor="@color/midnightblue"
                        android:textSize="15dp"
                        android:id="@+id/rCir"
                        android:onClick="Ready"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rec"
                        android:textStyle="bold"
                        android:textColor="@color/midnightblue"
                        android:textSize="15dp"
                        android:id="@+id/rRec"
                        android:onClick="Ready"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tri"
                        android:textStyle="bold"
                        android:textColor="@color/midnightblue"
                        android:textSize="15dp"
                        android:id="@+id/rTri"
                        android:onClick="Ready"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cuad"
                        android:textStyle="bold"
                        android:textColor="@color/midnightblue"
                        android:textSize="15dp"
                        android:id="@+id/rCuad"
                        android:onClick="Ready"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/midnightblue"
                    android:textStyle="bold"
                    android:hint="@string/rad"
                    android:textColorHint="@color/maroon"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:id="@+id/eRad"
                    android:visibility="invisible"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/midnightblue"
                    android:textStyle="bold"
                    android:hint="@string/lad"
                    android:textColorHint="@color/maroon"
                    android:textSize="15dp"
                    android:id="@+id/eLad"
                    android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/midnightblue"
                    android:textStyle="bold"
                    android:hint="@string/bas"
                    android:textColorHint="@color/maroon"
                    android:textSize="15dp"
                    android:id="@+id/eBas"
                    android:visibility="invisible"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/midnightblue"
                    android:textStyle="bold"
                    android:hint="@string/alt"
                    android:textColorHint="@color/maroon"
                    android:textSize="15dp"
                    android:id="@+id/eAlt"
                    android:visibility="invisible"/>
            </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button"
            android:id="@+id/bCal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/midnightblue"
                android:layout_weight="3"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/area"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/olive"
                android:layout_weight="4"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/tAns"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/olive"
                android:layout_weight="4"
                android:textStyle="bold"
                android:textSize="15dp"
                android:text="(metros)^2"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

